--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "rm -rf ./dist && tsc -p tsconfig.build.json",
+    "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "dev": "NODE_ENV=development nodemon",
     "lint": "eslint ./src/**/*.ts",
     "prepare": "husky install",
