--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "NODE_ENV=development nodemon",
     "lint": "eslint ./src/**/*.ts",
     "prepare": "husky install",
-    "start": "yarn node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "NODE_ENV=test jest",
     "typecheck": "tsc"
   },
