--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,19 @@ on:
       - opened
       - reopened
       - synchronize
-
 jobs:
   ci:
-    name: Build, lint, and test
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-
       - uses: pnpm/action-setup@v2
         with:
           version: 7
-          run_install: true
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - run: pnpm i
       - run: pnpm build
       - run: pnpm lint
       - run: pnpm test
