--- a/package.json
+++ b/package.json
@@ -66,17 +66,18 @@
     "prettier": "^2.8.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
+    "tsoa": "^5.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@koa/cors": "4.0.0",
     "@koa/router": "12.0.0",
+    "@tsoa/runtime": "^5.0.0",
     "dotenv-flow": "3.2.0",
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
     "koa-compress": "5.1.0",
     "koa-morgan": "1.0.1",
-    "tsoa": "5.0.0",
     "winston": "3.8.2"
   }
 }
