--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "dev": "NODE_ENV=development nodemon",
     "lint": "eslint ./src/**/*.ts",
-    "prepare": "husky install",
+    "prepare": "husky",
     "start": "node ./dist/index.js",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test vitest run",
     "typecheck": "tsc"
   },
   "repository": {
@@ -26,7 +26,7 @@
   },
   "keywords": [
     "koa",
-    "jest"
+    "vitest"
   ],
   "author": "@gairal",
   "license": "MIT",
@@ -34,49 +34,49 @@
     "url": "https://github.com/gairal/koa-seed/issues"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@faker-js/faker": "^7.6.0",
-    "@tsconfig/node18": "^1.0.1",
-    "@types/jest": "^29.2.5",
-    "@types/koa": "^2.13.5",
-    "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-compress": "^4.0.3",
-    "@types/koa-morgan": "^1.0.5",
-    "@types/koa__cors": "^3.3.0",
-    "@types/koa__router": "^12.0.0",
-    "@types/node": "^18.11.18",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@faker-js/faker": "^8.4.1",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-compress": "^4.0.6",
+    "@types/koa-morgan": "^1.0.8",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "^12.0.4",
+    "@types/node": "^20.12.10",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.2",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@koa/cors": "4.0.0",
-    "@koa/router": "12.0.0",
-    "dotenv-flow": "3.2.0",
-    "koa": "2.14.1",
-    "koa-bodyparser": "4.3.0",
-    "koa-compress": "5.1.0",
+    "@koa/cors": "5.0.0",
+    "@koa/router": "12.0.1",
+    "dotenv-flow": "4.1.0",
+    "koa": "2.15.3",
+    "koa-bodyparser": "4.4.1",
+    "koa-compress": "5.1.1",
     "koa-morgan": "1.0.1",
-    "modern-errors": "^5.5.0",
-    "winston": "3.8.2"
+    "modern-errors": "^7.0.1",
+    "winston": "3.13.0"
   }
 }
