--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          version: 7
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-          cache: "pnpm"
-      - run: pnpm i
-      - run: pnpm build
-      - run: pnpm lint
-      - run: pnpm test
+          bun-version: latest
+      - run: bun i
+      - run: bun run build
+      - run: bun lint
+      - run: bun run test
