--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
-    "dev": "NODE_ENV=development nodemon",
+    "dev": "NODE_ENV=development bun run --hot src/index.ts",
     "lint": "eslint ./src/**/*.ts",
     "prepare": "husky",
-    "start": "node ./dist/index.js",
+    "start": "bun run ./dist/index.js",
     "test": "NODE_ENV=test vitest run",
     "typecheck": "tsc"
   },
@@ -61,10 +61,8 @@
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
