--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
           bun-version: latest
       - run: bun i
       - run: bun run build
-      - run: bun lint
+      - run: bun biome ci --diagnostic-level=error
       - run: bun run test
