--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "dev": "NODE_ENV=development bun run --hot --inspect src/index.ts",
-    "lint": "eslint ./src/**/*.ts",
+    "lint": "biome check",
     "prepare": "husky",
     "start": "bun run ./dist/index.js",
     "test": "NODE_ENV=test vitest run",
@@ -24,16 +24,14 @@
     "type": "git",
     "url": "git+https://github.com/gairal/koa-seed.git"
   },
-  "keywords": [
-    "koa",
-    "vitest"
-  ],
+  "keywords": ["koa", "vitest"],
   "author": "@gairal",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gairal/koa-seed/issues"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@faker-js/faker": "^8.4.1",
@@ -46,22 +44,8 @@
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-typescript-sort-keys": "^3.2.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
-    "prettier": "^3.3.3",
     "supertest": "^7.0.0",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
